--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="edad">Edad:</label>
-                    <input type="text" class="form-control" id="edad" placeholder="Por ej: 32">
+                    <input type="number" class="form-control" id="edad" placeholder="Por ej: 32">
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
